--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
   "license": "MIT",
   "devDependencies": {
     "@playwright/test": "^1.40.0"
+  },
+  "dependencies": {
+    "@supabase/supabase-js": "^2.81.1"
   }
 }
