chore: cleanup generated artifacts and tighten .gitignore
Remove Playwright and report output directories (playwright-report, test-results, test-screenshots if present) plus stray JSON/HTML artifacts. Expand .gitignore to include blob-report/, coverage/, dist/, and environment files. No app logic changed.

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,16 @@ test-screenshots/
 test-results/
 playwright-report/
 test-results.json
+blob-report/
+
+# Coverage and build outputs
+coverage/
+dist/
+
+# Environment files
+.env
+.env.local
+.env.*.local
 
 # Node modules
 node_modules/
